Commit 23/06/23 - fixed pb css progress bar on firefox portfolio screen - test new emojis flags windows

--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -28,6 +28,7 @@ progress {
     width: 100%;
     height: 6px;
     border: none;
+    background: transparent;
 }
 
 progress::-webkit-progress-bar {
@@ -36,4 +37,8 @@ progress::-webkit-progress-bar {
 
 progress::-webkit-progress-value {
     background-color: #47CDD6;
+}
+
+progress::-moz-progress-bar {
+    background: #47CDD6;
 }
